# status-watch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled.yml
src/status_watch/: __init__.py  cli.py  config.py  onboarding.py  providers.py  reporting.py  signing.py  state.py  watcher.py
tests/: test_config.py  test_onboarding.py  test_providers.py  test_reporting.py  test_signing.py  test_state.py  test_watcher.py
