[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "status-watch"
version = "0.1.0"
description = "Deterministic poller for public provider status pages that detects newly opened incidents, with state kept between runs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "cyntra360hub" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
status-watch = "status_watch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
